--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Vampire Cowboy.html"
+export_path="./Texylvania.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
